fix: fix path to background

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body {
 }
 
 body {
-  background: url("../img/background.png") no-repeat center top;
+  background: url("img/background.png") no-repeat center top;
 }
 
 html {
